--- a/package.json
+++ b/package.json
@@ -8,6 +8,22 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
+  "devDependencies": {
+    "webpack": "^4.6.0",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "6.24.1",
+    "eslint": "^4.18.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
