--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
   "devDependencies": {
-    "webpack": "^4.6.0",
     "babel-core": "^6.18.2",
     "babel-eslint": "^8.0.1",
     "babel-loader": "7.1.2",
@@ -22,7 +22,8 @@
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "webpack": "^4.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
