--- a/package.json
+++ b/package.json
@@ -9,25 +9,23 @@
     "react-scripts": "1.1.4"
   },
   "devDependencies": {
-    "webpack": "^4.6.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "6.24.1",
     "eslint": "^4.18.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.35.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
+    "prettier-eslint-cli": "^4.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier-eslint --write \"src/**/*.+(js|jsx|scss)\""
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
